--- a/19CLC2_Group01_WebApp/package.json
+++ b/19CLC2_Group01_WebApp/package.json
@@ -3,9 +3,9 @@
   "name": "19clc2_group01_webapp",
   "version": "1.0.0",
   "description": "",
-  "main": "App.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node App.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
